adjusted z-index to attempt to fix contact form issue

--- a/css/style.css
+++ b/css/style.css
@@ -4045,3 +4045,11 @@ li {
     margin-bottom: 0;
     color: #fff;
 }
+
+.form-group {
+    z-index: 2;
+}
+
+.form-group input {
+    z-index: 3;
+}
